--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-three/drei": "^9.108.4",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/rapier": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "lucide-react": "^0.408.0",
+    "meshline": "^3.3.1",
     "next": "14.2.5",
     "react": "^18",
     "react-countup": "^6.5.3",
@@ -26,7 +30,8 @@
     "react-icons": "^5.2.1",
     "swiper": "^11.1.5",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "eslint": "^8",
